<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    tools:context=".Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/back_btn"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_back"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_btn"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_marginTop="15dp"
        android:text="@string/info"
        />

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_user"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_marginTop="@dimen/et_pass_mt"
        android:textStyle="bold"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_full_name"
        android:text="@string/error"
        android:layout_below="@id/et_full_name"
        android:textSize="@dimen/tv_text_size_enter"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_error_full_name"
        android:layout_marginTop="@dimen/btn_radius"
        android:hint="@string/enter_date_of_birth"
        android:textStyle="bold"
        android:inputType="date"
        />



        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dob"
            android:orientation="horizontal"
            android:layout_below="@id/tv_error_full_name"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginStart="16dp"
            android:gravity="bottom"
            android:layout_alignBottom="@id/dob">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_male"

                android:text="@string/male"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_female"
                android:text="@string/female"
                />
        </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_dob"
        android:text="@string/error"
        android:layout_below="@id/dob"
        android:textSize="@dimen/tv_text_size_enter"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_gender"
        android:text="@string/error"
        android:layout_below="@id/radioGroup"
        android:layout_toEndOf="@id/tv_error_dob"
        android:layout_alignStart="@id/radioGroup"
        android:textSize="@dimen/tv_text_size_enter"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mt_reg_email"
        android:layout_below="@id/radioGroup"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email_address"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_email"
        android:text="@string/error"
        android:layout_below="@id/et_reg_email"
        android:textSize="@dimen/tv_text_size_enter"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        />

    <EditText
        android:id="@+id/et_reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/et_pass_mt"
        android:layout_below="@+id/et_reg_email"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_password"
        android:text="@string/error"
        android:layout_below="@id/et_reg_pass"
        android:textSize="@dimen/tv_text_size_enter"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        />

    <TextView
        android:id="@+id/tv_diff_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reg_pass"
        android:layout_marginTop="@dimen/tv_bottom"
        android:text="@string/diff_account"
        android:gravity="center_horizontal"
        />
    <Button
        android:id="@+id/btn_continue"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_diff_acc"
        android:text="@string/cont"
        android:background="@drawable/bordered_button"
        />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>