<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_left"
    android:paddingRight="@dimen/padding_left"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_head"
                android:layout_marginTop="@dimen/tv_margin_top"
                android:textSize="@dimen/tv_head_size"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutEmail"
                android:layout_below="@+id/tv_login_head">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/et_mt"
                    android:hint="@string/email"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutEmail"
                android:textColor="@color/colorAccent" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutEmail"
                app:passwordToggleEnabled="true"
                android:id="@+id/layoutPassword">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/et_pass_mt"
                    android:hint="@string/password"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutPassword"
                android:textColor="@color/colorAccent" />
            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutPassword"
                android:layout_marginTop="@dimen/btn_mt"
                android:text="@string/btn_login"
                android:background="@drawable/rounded_button"
                android:textColor="@color/btn_text_color"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_left"
                android:text="@string/span"
                android:id="@+id/tv_span"
                android:layout_below="@+id/btn"
                />



        </RelativeLayout>
    </ScrollView>
</RelativeLayout>