<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:layout_height="match_parent"
    tools:context=".OTP">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/back_btn"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_back"/>
    <TextView
        android:id="@+id/tv_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_btn"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/otp_verification"
        android:textSize="@dimen/otp_text"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_otp"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/enter_otp"
        android:textStyle="bold"
        android:textSize="@dimen/tv_text_size_enter"
        />
    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@id/tv_enter"
        android:layout_marginTop="@dimen/mt_radio"
        >

        <EditText
            android:id="@+id/otp_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="1"
            />
        <EditText
            android:id="@+id/otp_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:gravity="center_horizontal"
            android:maxLength="1"
            />
        <EditText
            android:id="@+id/otp_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            />
        <EditText
            android:id="@+id/otp_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLength="1"
            android:layout_weight="1"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_otp"
        android:weightSum="13"
        android:layout_marginTop="@dimen/mt_radio"
        >

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/resend"
            android:background="@drawable/bordered_button"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_weight="6"
            android:layout_marginStart="@dimen/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@drawable/rounded_button"
            android:textColor="@color/btn_text_color"
            />

    </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>